--- a/sidebar.css
+++ b/sidebar.css
@@ -1,5 +1,30 @@
+.topbar{
+  width: 100%;
+  height: 48px;
+  background-color: #fff;
+  position: fixed;
+  z-index: 5;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+
+.topbar-button{
+  display: inline-block;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0.4;
+}
+
+.topbar-button:hover{
+  opacity: 1.0;
+}
+
 .sidebar{
-  text-align: right;
+  text-align: center;
   padding: 16px;
   width: 200px;
   position: fixed;
@@ -7,7 +32,7 @@
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .nav-item{
@@ -80,9 +105,37 @@
 }
 
 @media (min-width: 760px){
+  .sidebar{
+    text-align: right;
+    align-items: flex-end;
+  }
 
+  .topbar{
+    display: none;
+  }
 }
 
 @media (max-width: 760px){
-  
+  .sidebar{
+    width: 100%;
+    font-size: 32px;
+    background-color: #fff;
+    z-index: 4;
+    top: -100vh;
+    transition: all 0.2s ease;
+  }
+
+  .show-sidebar{
+    top: 0;
+    transition: all 0.4s ease;
+  }
+
+  .sidebar-social{
+    flex-flow: row nowrap;
+    justify-content: center;
+  }
+
+  .sidebar-social-item{
+    width: 64px;
+  }
 }
