--- a/style.css
+++ b/style.css
@@ -140,9 +140,9 @@ a{
 }
 
 .project-item img:hover{
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   transition: all 0.2s ease;
-  transform: translateY(-4px);
+  transform: translateY(-8px);
   opacity: 0.8;
 }
 
@@ -157,6 +157,15 @@ a{
   margin: 0;
   font-size: 20px;
   font-weight: 300;
+}
+
+.profile{
+  border-radius: 50%;
+  max-width: 500px;
+}
+
+.cat-img{
+  max-width: 480px;
 }
 
 @media (min-width: 620px){
